--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,8 +2,8 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Science is a candle in the dark.</h2>
-                <p>To light a candle is to cast a shadow.</p>
+                <h2>Science is a candle in the dark. - Carl Sagan</h2>
+                <p>To light a candle is to cast a shadow. - Ursula K. LeGuin</p>
                 
             </div>
         </div>
